--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="root">  
   <div class="page">
     <header class="header">
-      <img src="images/__logo.svg" alt="Изображене границ России" class="header__logo">
+      <img src="../images/__logo.svg" alt="Изображене границ России" class="header__logo">
       <div class="header__buttons">
         <button class="header__lang-link active">Ru</button>
         <button class="header__lang-link">En</button>
@@ -19,7 +19,7 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия </br> по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках <br> новостей, а здесь.</p>
-      <img src="images/lead__image.png" alt="Девушка в поезде" class="lead__image">
+      <img src="../images/lead__image.png" alt="Девушка в поезде" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
     <section class="intro">
@@ -34,18 +34,18 @@
       </ul>
     </section>
     <section class="photo-grid">
-      <img src="images/__item-11.png" alt="" class="photo-grid__item">
-      <img src="images/__item-10.png" alt="" class="photo-grid__item">
-      <img src="images/__item-9.png" alt="" class="photo-grid__item">
-      <img src="images/__item-8.png" alt="" class="photo-grid__item">
-      <img src="images/__item-7.png" alt="" class="photo-grid__item">
-      <img src="images/__item-6.png" alt="" class="photo-grid__item">
-      <img src="images/__item-5.png" alt="" class="photo-grid__item">
-      <img src="images/__item-4.png" alt="" class="photo-grid__item">
-      <img src="images/__item-3.png" alt="" class="photo-grid__item">
-      <img src="images/__item-2.png" alt="" class="photo-grid__item">
-      <img src="images/__item-1.png" alt="" class="photo-grid__item">
-      <img src="images/__item.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-11.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-10.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-9.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-8.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-7.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-6.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-5.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-4.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-3.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-2.png" alt="" class="photo-grid__item">
+      <img src="../images/__item-1.png" alt="" class="photo-grid__item">
+      <img src="../images/__item.png" alt="" class="photo-grid__item">
     </section>
     <section class="places">
       <div class="place">
