--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="place">
         <h3 class="place__title">Куршская коса</h3>
         <div class="place__website">
-          <p class="place__website_url-heading">URL</p>
+          <p class="place__url-heading">URL</p>
           <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
         </div>
         <img src="images/__image.png" alt="Куршская коса" class="place__image">
