--- a/index.html
+++ b/index.html
@@ -126,11 +126,13 @@
       </div>
     </section>
     <section class="cover">
-      <img src="./images/__background.png" alt="Изображение поездов" class="cover__background">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      </a>  
+        <h2 class="cover__title">До Байкала 
+          «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы 
+          о Транссибе — путешествие 
+          от столицы до Байкала на электричках.</p>
+      </a>
     </section>
     <footer class="footer">
       <div class="footer__links">
